Add support for various B&N display panels

--- a/drivers/video/omap2/displays/Kconfig
+++ b/drivers/video/omap2/displays/Kconfig
@@ -68,4 +68,43 @@ config TC358765_DEBUG
 	depends on PANEL_TC358765 && DEBUG_FS
 	help
 	  Support of TC358765 DSI-2-LVDS chip register access via debugfs
+
+config PANEL_BOXER
+	tristate "Boxer DLP Panel"
+	depends on OMAP2_DSS
+	help
+	  LCD Panel used in BN Ovation
+
+config PANEL_AUO
+	tristate "AUO DLP Panel"
+	depends on OMAP2_DSS
+	help
+	  LCD Panel used in BN Ovation
+
+config PANEL_TC358765_BOXER
+	tristate "Toshiba TC358765 DSI-2-LVDS chip with Acclaim boxer panel"
+	depends on OMAP2_DSS_DSI && I2C && SPI
+	select BACKLIGHT_CLASS_DEVICE
+	help
+	  Toshiba TC358765 DSI-2-LVDS chip with boxer panel
+
+config PANEL_HYDIS
+	tristate "Hydis HV080X01-100 panel"
+	depends on OMAP2_DSS
+        select BACKLIGHT_CLASS_DEVICE
+	help
+	  Hydis panel HV080X01-100
+
+config PANEL_ORISE
+	tristate "Orise based TCON display panel"
+	depends on OMAP2_DSS
+	help
+	  Say yes here if you have an Orise TCON based panel.
+
+config PANEL_NOVATEK
+	tristate "Novatek based TCON display panel"
+	depends on OMAP2_DSS
+	help
+	  Say yes here if you have a Novatek TCON based panel.
+
 endmenu
