--- a/project.config
+++ b/project.config
@@ -2,3 +2,6 @@
 	state = active
 [access]
 	inheritFrom = CyanogenMod/android_device_bn_common
+[access "refs/heads/*"]
+	forgeAuthor = group nookhd_devs
+	forgeCommitter = group nookhd_devs
