Project settings updated

--- a/project.config
+++ b/project.config
@@ -1,7 +1,8 @@
 [project]
-	state = active
 [access]
 	inheritFrom = CyanogenMod/android_device_bn_common
 [access "refs/heads/*"]
 	forgeAuthor = group nookhd_devs
 	forgeCommitter = group nookhd_devs
+[submit]
+	action = rebase if necessary
