Kconfig: select WEXT options when selecting boards
Change-Id: Ie27ec01e7a73634f9ae2a1741d3d601bc83ad178

--- a/arch/arm/mach-omap2/Kconfig
+++ b/arch/arm/mach-omap2/Kconfig
@@ -368,6 +368,9 @@ config MACH_OMAP_ACCLAIM
 	select HWMON
 	select OMAP_REBOOT_REASON
 	select WIRELESS_EXT
+	select WEXT_CORE
+	select WEXT_PROC
+	select WEXT_PRIV
 
 config MACH_OMAP_OVATION
 	bool "OMAP 44xx Ovation Board"
@@ -380,6 +383,10 @@ config MACH_OMAP_OVATION
 	select KEYBOARD_GPIO
 	select HWMON
 	select OMAP_REBOOT_REASON
+	select WIRELESS_EXT
+	select WEXT_CORE
+	select WEXT_PROC
+	select WEXT_PRIV
 
 config OVATION_ALWAYS_COLD_BOOT
 	bool "Always perform cold reboot on reset"
@@ -397,6 +404,10 @@ config MACH_OMAP_HUMMINGBIRD
 	select KEYBOARD_GPIO
 	select HWMON
 	select OMAP_REBOOT_REASON
+	select WIRELESS_EXT
+	select WEXT_CORE
+	select WEXT_PROC
+	select WEXT_PRIV
 
 config MACH_OMAP4_PANDA
 	bool "OMAP4 Panda Board"
